[project]
requires-python = ">=3.12"

[tool.ruff]
line-length = 88
exclude = ["data/", "**/migrations/**"]

[tool.ruff.lint]
select = ["B", "C4", "D", "DJ", "E", "EXE", "F", "I", "ICN", "N", "RET", "S", "SIM", "UP", "W"]
extend-select = ["E501",]
ignore = ["D417", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "S101", "SIM102"]
ignore-init-module-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/migrations/*.py" = ["E501", "FBT003"]

[tool.ruff.lint.pydocstyle]
convention = "google"
